2008-7-9  Andrew Gelman  <gelman@stat.columbia.edu>  
    * R/bayesglm: for gaussian family, dispersion <- var(y)/10000

2008-6-23  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-9.
    * R/se.coef: remove trick to show the coef names
    * R/bayesglm: scaled=TRUE --> * sd(y) / sd(x)

2008-6-23  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-8.
    * R/Bayesglm: Clean up redundant code.


2008-6-5  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-8.
    all the lmer2 class-related methods are now mer-class methods.
    all the mer-class methods are obsolete 
    mcmcsamp is obsolet because it is not working in lme4


2008-6-4  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-7.
    * R/traceplot: add mcmc.list method (previously was mask by traceplot
        generic.

2008-6-4  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-6.
    * R/traceplot:
      1. make it a generic
      2. traceplot.bugs --> S4 method

2008-5-1  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-5.

2008-4-12  Yu-Sung Su     <ys463@columbia.edu>  
    * R/bayesglm.h: 
        1. fix a bug in print for bayesglm.h
        2. add show for bayesglm.h
    * R/coefplot: add a stop message for varnames

2008-4-11  Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.1-4.
    * man/terms: terms.Rd is obsolet!
    * R/bayesglm: terms.object -> terms
    * R/bayesglm.h: use model.matrix.bayes.h; terms.object -> terms
    * R/model.matrix.bayes: 
        1. no longer a S4 method.
        2. add model.matrix.bayes2 for bayesglm.h
    * R/terms: terms.bayes is obsolet!

2008-4-10  Yu-Sung Su     <ys463@columbia.edu>  
           Masanao Yajima <my2167@columbia.edu>
    * man/traceplot.bugs: add help file of traceplot.bugs().
    * R/rescale: if !is.numeric(x.obs) coerce x.obs into numeric