@@ -1,3 +1,8 @@
+2008-7-10  Yu-Sung Su     <ys463@columbia.edu>  
+    * DESCRIPTION (Version, Date): 1.1-10.
+    * man/rescale: fix a typo in the example: full2 -> full
+    * R/rescale: fix a bug;
+
 2008-7-9  Andrew Gelman  <gelman@stat.columbia.edu>  
     * R/bayesglm: for gaussian family, dispersion <- var(y)/10000
 
